DevTools: Do not fire bg sync events when offline

This change prevents background sync manager from firing sync events
when DevTools are emulating offline network mode.
Such events will not be fired as long as at least one page that relies
on specific BackgroundSyncManager instance is offline. Events will be
sent as soon as all such pages switch to online.

Bug: 625798
Change-Id: I1216a1e605660132949e88e3986bb3cad769fd54